Enable configuration cache (test tasks) (#15384)
* Enable configuration cache for :help (as a test).

* Enable configuration cache for :showTestsSeed.

* Refactor ModularPathsExtension to enable configuration cache (compileJava works).

* Make the test task support the configuration-cache.